# project_basic1

./: .firebaserc  .gitignore  Cargo.toml  firebase-config.js  firestore.indexes.json  main.js  package-lock.json  package.json  project1.html  slide.html
.firebase/: hosting.cHVibGlj.cache
back/: .gitignore  package-lock.json  server.js
front/: index.html  style.css
public/: index.html
src/: main.rs
